# car_price_prediction

./: README.md  pyproject.toml  requirements.txt
conf/base/: catalog.yml  parameters_data_science.yml
notebooks/: Untitled.ipynb  feature_selection.ipynb  initial_exploration.ipynb  model_training.ipynb
src/car_price_prediction/: __init__.py  __main__.py  settings.py
src/car_price_prediction/pipelines/data_processing/: nodes.py  pipeline.py
src/car_price_prediction/pipelines/data_science/: nodes.py  pipeline.py
